--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input id="busqueda" type="text" placeholder=" Search...">
                 <button id="boton" onclick="busca()">Buscar</button>
             </div>
-            <div id="prueba">
+            <div id="prueba"></div>
             </div>
             
         </header>
